--- a/package.json
+++ b/package.json
@@ -23,5 +23,15 @@
     "style-loader": "^3.3.3",
     "webpack": "^5.88.2",
     "webpack-cli": "^5.1.4"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-useragent": "^1.0.15",
+    "google-auth-library": "^9.0.0",
+    "googleapis": "^126.0.1",
+    "nodemon": "^3.0.1",
+    "postman": "^0.2.0"
   }
 }
