--- a/backend/package.json
+++ b/backend/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node backend.js",
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1",
     "host": "git subtree push --prefix dist origin gh-pages"
   },
